--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "install": "cd client && npm install",
     "client": "cd client && npm start"
   },
+  
+   "engines": {
+    "node": "^17.4.0"
+  },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
