--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1",
-        "node": "^17.4.0"
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.4"
